tests/ui/pattern/struct-variant-as-tuple-variant.stderr
error[E0532]: cannot find tuple struct or tuple variant `FooB` in this scope
  --> $DIR/struct-variant-as-tuple-variant.rs:12:9
   |
LL |     FooB { x: i32, y: i32 }
   |     ----------------------- `FooB` defined here
...
LL |         FooB(a, b) => println!("{} {}", a, b),
   |         ^^^^^^^^^^ help: use struct pattern syntax instead: `FooB { x: a, y: b }`
   |
   = note: a variant named `FooB` exists in another namespace

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0532`.
